--- a/x-back/src/main/webapp/WEB-INF/pages/home.html
+++ b/x-back/src/main/webapp/WEB-INF/pages/home.html
@@ -53,7 +53,7 @@
 
 <script type="text/javascript">
 	$(function(){
-		$.get("/sys-back/home/menu", function(ListData){
+		$.get("/x-back/home/menu", function(ListData){
 			$('#sysMenu').tree({
 		    	data: ListData,
 		    	onClick: function(node){
