--- a/x-back/src/main/webapp/WEB-INF/pages/home.html
+++ b/x-back/src/main/webapp/WEB-INF/pages/home.html
@@ -10,14 +10,14 @@
 	<script type="text/javascript" th:src="@{/resources/easyui/jquery.easyui.min.js}" src="../../jquery.easyui.min.js"></script>
 </head>
 
-<body>
-	<div class="easyui-layout" style="width:100%; height:720px;">
+<body class="easyui-layout" style="overflow: hidden; border: none; margin: 0px; padding: 0px;">
+	<div class="easyui-layout" style="width:100%; height: 100%;">
 	
         <div data-options="region:'north'" style="height:50px; background-color: #daeef5; font-size: 17px; padding-left: 20px; padding-top: 15px">
         		X-back
         </div>
         
-        <div data-options="region:'west', split:true" title=" " style="width:12%;">
+        <div data-options="region:'west', split:true" title=" " style="width:12%; height:100%;">
 	        <ul id="sysMenu" class="easyui-tree" data-options="animate:true">
 	        </ul>
         </div>
