--- a/x-back/src/main/webapp/WEB-INF/pages/home.html
+++ b/x-back/src/main/webapp/WEB-INF/pages/home.html
@@ -30,31 +30,33 @@
     </div>
 </body>
 
-<script type="text/javascript">
-	
-	$('#sysMenu').tree({
-		url: '/x-back/home/menu',
-	   	onClick: function(node){
-	   		if(node.attributes != null){
-	   			if(node.attributes.url != null){
-	   				var tabIsExists = $('#centerTabs').tabs("exists", node.text);
-	   				if(tabIsExists){
-	   					// tab已经存在
-	   					$('#centerTabs').tabs("select", node.text);
-	   				}else{
-	   					$('#centerTabs').tabs('add',{
-	    				    title: node.text,
-	    				    href: node.attributes.url,
-	    				    border: false,
-	    				    closable: true,
-	    				}); 
-	   				}
-	   				// var content = '<div style="width:100%; height:100%; overflow:hidden;">';
-	   				// content	+= '<iframe src="' + node.attributes.url + '" scrolling="auto" style="width:100%; height:100%; border:0;"></iframe></div>';
-	   				// $("#contentCenter").html(content);
-	   			}
-	   		}
-	   	}
+<script th:inline="javascript">
+	$(function(){
+		$('#sysMenu').tree({
+			url: [[@{/home/menu}]],
+		   	onClick: function(node){
+		   		if(node.attributes != null){
+		   			if(node.attributes.url != null){
+		   				var tabIsExists = $('#centerTabs').tabs("exists", node.text);
+		   				if(tabIsExists){
+		   					// tab已经存在
+		   					$('#centerTabs').tabs("select", node.text);
+		   				}else{
+		   					var content = '<div style="width:100%; height:100%; overflow:hidden;">';
+			   				content	+= '<iframe src="' + node.attributes.url + '" style="width:100%; height:100%; border:0;"></iframe></div>';
+		   					$('#centerTabs').tabs('add',{
+		    				    title: node.text,
+		    				   // href: node.attributes.url,
+		    				    content: content,
+		    				    border: false,
+		    				    closable: true,
+		    				}); 
+		   				}
+		   				
+		   			}
+		   		}
+		   	}
+		});
 	});
 </script>
 
