--- a/x-back/src/main/webapp/WEB-INF/pages/sys/menumanage.html
+++ b/x-back/src/main/webapp/WEB-INF/pages/sys/menumanage.html
@@ -1,80 +1,71 @@
-<div id="tb" style="padding:10px 10px;">
-	菜单名称: <input name="menuName" class="easyui-textbox" style="width:150px;">
-	菜单等级: 
-    <select name="menuLevel" class="easyui-combobox" panelHeight="auto" style="width:100px">
-        <option value="1">一级</option>
-        <option value="2">二级</option>
-        <option value="3">三级</option>
-    </select>
-	菜单类型:
-	<select name="menuType" class="easyui-combobox" panelHeight="auto" style="width:100px">
-        <option value="1">节点</option>
-        <option value="2">url</option>
-    </select>
-    <a id="searchButton" href="javascript:void()" class="easyui-linkbutton" iconCls="icon-search">Search</a>
-</div>
-<table id="datagrid" title="" class="easyui-datagrid" style="width:98%;" fitColumns="true"
-     singleSelect="true" border="false" pagination="true" pageList="[15,50,100]" pageSize="15">
-    <thead>
-        <tr>
-            <th field="menuName" width="50">菜单名称</th>
-            <th field="menuLevel" width="50">菜单等级</th>
-            <th field="menuType" width="50">菜单类型</th>
-            <th field="menuUrl" width="100">菜单链接</th>
-            <th field="menuWeight" width="50">菜单权重</th>
-            <th field="operate" width="70">操作</th>
-        </tr>
-    </thead>
-    <tbody>                            
-		
-		<tr>                           
-			<td>Data 1</td>            
-			<td>Data 2</td>            
-			<td>Data 3</td>            
-			<td>Data 4</td>            
-			<td>Data 5</td>            
-			<td>Data 6</td>            
-		</tr> 
-		<tr>                           
-			<td>Data 1</td>            
-			<td>Data 2</td>            
-			<td>Data 3</td>            
-			<td>Data 4</td>            
-			<td>Data 5</td>            
-			<td>Data 6</td>            
-		</tr>
-		<tr>                           
-			<td>Data 1</td>            
-			<td>Data 2</td>            
-			<td>Data 3</td>            
-			<td>Data 4</td>            
-			<td>Data 5</td>            
-			<td>Data 6</td>            
-		</tr>
-		
-		<tr>                           
-			<td>Data 1</td>            
-			<td>Data 2</td>            
-			<td>Data 3</td>            
-			<td>Data 4</td>            
-			<td>Data 5</td>            
-			<td>Data 6</td>            
-		</tr>
-		<tr>                           
-			<td>Data 1</td>            
-			<td>Data 2</td>            
-			<td>Data 3</td>            
-			<td>Data 4</td>            
-			<td>Data 5</td>            
-			<td>Data 6</td>            
-		</tr>
-		<tr>                           
-			<td>Data 1</td>            
-			<td>Data 2</td>            
-			<td>Data 3</td>            
-			<td>Data 4</td>            
-			<td>Data 5</td>            
-			<td>Data 6</td>            
-		</tr>                          
-	</tbody>
-</table>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<title>home</title>
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/easyui/themes/material/easyui.css}" href="../../themes/default/easyui.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/easyui/themes/icon.css}" href="../../themes/icon.css">
+	<script type="text/javascript" th:src="@{/resources/easyui/jquery.min.js}" src="../../jquery.min.js"></script>
+	<script type="text/javascript" th:src="@{/resources/easyui/jquery.easyui.min.js}" src="../../jquery.easyui.min.js"></script>
+</head>
+
+<body>
+	<div class="easyui-layout">
+		<div id="tb" style="padding:10px 10px;">
+			菜单名称: <input name="menuName" class="easyui-textbox" style="width:150px;">
+			菜单等级: 
+		    <select name="menuLevel" class="easyui-combobox" panelHeight="auto" style="width:100px">
+		        <option value="1">一级</option>
+		        <option value="2">二级</option>
+		        <option value="3">三级</option>
+		    </select>
+			菜单类型:
+			<select name="menuType" class="easyui-combobox" panelHeight="auto" style="width:100px">
+		        <option value="1">节点</option>
+		        <option value="2">url</option>
+		    </select>
+		    <a id="searchButton" class="easyui-linkbutton" iconCls="icon-search">查询</a>
+		</div>
+		<table id="menuGrid"></table>
+	</div>
+</body>
+
+
+<script th:inline="javascript">
+	$(function(){
+		$("#searchButton").on('click', function() {
+			
+			$("#menuGrid").datagrid({
+				fitColumns: true,
+				columns:[ [
+				    {field:'menuName', title: '菜单名称', width: 50},
+			    	{field:'menuLevel', title: '菜单等级', width: 40},
+			    	{field:'menuType', title: '菜单类型', width: 40},
+			    	{field:'menuUrl', title: '菜单url', width: 70},
+			    	{field:'operate', title: '操作', width: 50}
+				] ],
+				url: [[@{/sysmanage/menumanage/load}]],
+				method: 'post', 
+				queryParams: {
+					"menuName": $("input[name='menuName']").val(),
+					"menuLevel": $("input[name='menuLevel']").val(),
+					"menuType": $("input[name='menuType']").val()
+				},
+				loadFilter: function(page){
+					console.debug(page);
+					return {total: 0, rows:[]}
+				},
+				border: false,
+				
+				pagination: true,
+				pageList: [15, 50, 100],
+			    pageSize: 15
+			});
+		});
+	});
+	
+
+</script>
+
+</html>
