--- a/x-back/src/main/webapp/WEB-INF/pages/home.html
+++ b/x-back/src/main/webapp/WEB-INF/pages/home.html
@@ -43,7 +43,7 @@
 			   					// tab已经存在
 			   					$('#centerTabs').tabs("select", node.text);
 			   				}else{
-			   					var content = '<div style="width:100%; height:100%; overflow:hidden;">';
+			   					var content = '<div style="width:100%; height:100%;">';
 				   				content	+= '<iframe src="' + node.attributes.url + '" style="width:100%; height:100%; border:0;"></iframe></div>';
 			   					$('#centerTabs').tabs('add',{
 			    				    title: node.text,
