--- a/x-back/src/main/webapp/WEB-INF/pages/home.html
+++ b/x-back/src/main/webapp/WEB-INF/pages/home.html
@@ -188,7 +188,7 @@
 					$("#myTabs").append(tab);
 					
 					var tabContent = '<div class="tab-pane" id="tabContent' + id + '">'
-						+ '<iframe src="' + url + '" width="100%" height="700px" style="border:0;"></iframe></div>'
+						+ '<iframe class="auto_height" src="' + url + '" width="100%" style="border:0;"></iframe></div>'
 						+ '</div>';
 						
 					$("#myTabContents").append(tabContent);
