--- a/x-back/src/main/webapp/WEB-INF/pages/sys/menumanage.html
+++ b/x-back/src/main/webapp/WEB-INF/pages/sys/menumanage.html
@@ -57,29 +57,16 @@
 			</div>
 		</div>
 		<!-- 菜单编辑弹框 -->
-		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-							&times;
-						</button>
-						<h4 class="modal-title" id="myModalLabel">
-							模态框（Modal）标题
-						</h4>
-					</div>
-					<div class="modal-body">
-						在这里添加一些文本
-					</div>
-					<div class="modal-footer">		
-						<button type="button" class="btn btn-default" data-dismiss="modal">关闭
-						</button>
-						<button type="button" class="btn btn-primary">
-							提交更改
-						</button>
-					</div>
-				</div><!-- /.modal-content -->						
-			</div>
+		<div class="modal fade" id="menuEditModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			
+		</div>
+		<!-- 保存成功提示框 -->
+		<div class="modal fade" id="alert_save_success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		  <div class="modal-dialog" role="document">
+	      	<div id="alert_save_success" class="alert alert-success">
+				<strong>成功！</strong>保存是成功的。
+		    </div>
+		  </div>
 		</div>
 	</div>
 </body>
@@ -100,9 +87,18 @@
 		
 		$("#dataTable").on('click', '.btn_edit' ,function(){
 			var menuId = $(this).next().val();
-			$("#myModal").modal({
-				keyboard: false
-			})
+			var url = [[@{/sysmanage/menumanage/menuedit}]]
+			
+			$.post(
+				url, 
+				{ "id" : menuId },
+				function(data){
+					$("#menuEditModal").html(data);
+					$("#menuEditModal").modal(
+						{ keyboard: false }
+					);
+				}
+			);
 		});
 	});
 	
